--- a/learn_git.html
+++ b/learn_git.html
@@ -1,1 +1,9 @@
-<div>this is a git test</div>
+<!DOCTYPE html>
+    <head>
+        <title>hello git</title>
+    </head>
+    <body>
+        <h1>this is a git test</h1>
+    </body>
+</html>
+
