--- a/learn_git.html
+++ b/learn_git.html
@@ -3,7 +3,7 @@
         <title>hello git</title>
     </head>
     <body>
-        <h1>this is a git test</h1>
+        <h1 style="color: orange">this is a git test</h1>
     </body>
 </html>
 
